# PhotoTime

./: .gitignore  CMakeLists.txt  LICENSE  PhotoTime.XP.Pelles8.ppj  PhotoTime.ppj  PhotoTime.ppw  README.md  README_zh.md  about.c  about.h  commctrls.c  commctrls.h  export.c  export.h  gdip.c  gdip.h  gdipimage.h  listview.h  listvisw.c  main.c  main.h  main.rc  parsest.c  parsest.h  parsest.ppj  photo.c  photo.h  photoview.c  photoview.h  res1.xml  statusbar.c  statusbar.h  toolbar.c  toolbar.h  utils.c  utils.h
.github/workflows/: build.yml
